--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tauri-apps/api": "latest",
+    "@tauri-apps/plugin-opener": "^2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
