--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         platform:
           - macos-latest
-          - ubuntu-latest
+          - ubuntu-22.04
           - windows-latest
 
     steps:
@@ -35,7 +35,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       - name: Install dependencies (Ubuntu)
-        if: matrix.platform == 'ubuntu-latest'
+        if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.0-dev \
@@ -80,7 +80,7 @@ jobs:
 
   release:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: startsWith(github.ref, 'refs/tags/')
     
     steps:
@@ -98,8 +98,8 @@ jobs:
           files: |
             artifacts/macos-latest-*/**/*.dmg
             artifacts/macos-latest-*/**/*.app.tar.gz
-            artifacts/ubuntu-latest-*/**/*.AppImage
-            artifacts/ubuntu-latest-*/**/*.deb
+            artifacts/ubuntu-22.04-*/**/*.AppImage
+            artifacts/ubuntu-22.04-*/**/*.deb
             artifacts/windows-latest-*/**/*.msi
             artifacts/windows-latest-*/**/*.exe
           draft: false
