--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,13 +45,18 @@ jobs:
             libssl-dev \
             libgtk-3-dev \
             libayatana-appindicator3-dev \
-            librsvg2-dev
+            librsvg2-dev \
+            libsoup-3.0-dev \
+            libjavascriptcoregtk-4.1-dev \
+            pkg-config
 
       - name: Install dependencies (macOS)
         if: matrix.platform == 'macos-latest'
         run: |
           brew install node
           brew install rust
+          brew install webkitgtk
+          brew install libsoup
 
       - name: Install dependencies (Windows)
         if: matrix.platform == 'windows-latest'
