--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,16 @@ jobs:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
 
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install Python dependencies
+        run: |
+          pip install --upgrade pip
+          pip install -r src-tauri/requirements.txt
+
       - name: Install dependencies (Ubuntu)
         if: matrix.platform == 'ubuntu-22.04'
         run: |
@@ -57,12 +67,14 @@ jobs:
           brew install rust
           brew install webkitgtk
           brew install libsoup
+          brew install python@3.10
 
       - name: Install dependencies (Windows)
         if: matrix.platform == 'windows-latest'
         run: |
           choco install nodejs
           choco install rust
+          choco install python
 
       - name: Install frontend dependencies
         run: bun install
