--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,26 +48,42 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev \
+          sudo apt-get install -y \
             build-essential \
             curl \
             wget \
             libssl-dev \
+            pkg-config \
+            # WebKit 和 GTK 依赖
+            libwebkit2gtk-4.0-dev \
             libgtk-3-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev \
             libsoup-3.0-dev \
             libjavascriptcoregtk-4.1-dev \
-            pkg-config
+            # 其他必要的库
+            libayatana-appindicator3-dev \
+            librsvg2-dev \
+            libcairo2-dev \
+            libpango1.0-dev \
+            libatk1.0-dev \
+            libgdk-pixbuf2.0-dev \
+            libglib2.0-dev \
+            libgirepository1.0-dev
 
       - name: Install dependencies (macOS)
         if: matrix.platform == 'macos-latest'
         run: |
           brew install node
           brew install rust
+          brew install python@3.10
+          # 安装 WebKit 相关依赖
           brew install webkitgtk
           brew install libsoup
-          brew install python@3.10
+          brew install gtk+3
+          brew install cairo
+          brew install pango
+          brew install atk
+          brew install gdk-pixbuf
+          brew install glib
 
       - name: Install dependencies (Windows)
         if: matrix.platform == 'windows-latest'
@@ -75,6 +91,8 @@ jobs:
           choco install nodejs
           choco install rust
           choco install python
+          choco install visualstudio2022buildtools
+          choco install visualstudio2022-workload-vctools
 
       - name: Install frontend dependencies
         run: bun install
@@ -86,6 +104,8 @@ jobs:
         run: bun run tauri build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig
+          LD_LIBRARY_PATH: /usr/lib/x86_64-linux-gnu
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
