--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,24 +42,27 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install --upgrade pip
-          pip install -r src-tauri/requirements.txt
+          # 尝试使用国内镜像源解决 SSL 问题
+          pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org -r src-tauri/requirements.txt || {
+            echo "使用默认源失败，尝试使用国内镜像源..."
+            pip install -i https://pypi.tuna.tsinghua.edu.cn/simple/ --trusted-host pypi.tuna.tsinghua.edu.cn -r src-tauri/requirements.txt || {
+              echo "清华源失败，尝试阿里云源..."
+              pip install -i https://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com -r src-tauri/requirements.txt
+            }
+          }
 
-      - name: Install dependencies (Ubuntu)
+      - name: Install system dependencies (Ubuntu)
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y \
             build-essential \
-            curl \
-            wget \
             libssl-dev \
             pkg-config \
-            # WebKit 和 GTK 依赖
             libwebkit2gtk-4.0-dev \
             libgtk-3-dev \
             libsoup-3.0-dev \
             libjavascriptcoregtk-4.1-dev \
-            # 其他必要的库
             libayatana-appindicator3-dev \
             librsvg2-dev \
             libcairo2-dev \
@@ -69,30 +72,21 @@ jobs:
             libglib2.0-dev \
             libgirepository1.0-dev
 
-      - name: Install dependencies (macOS)
+      - name: Install system dependencies (macOS)
         if: matrix.platform == 'macos-latest'
         run: |
-          brew install node
-          brew install rust
-          brew install python@3.10
-          # 安装 WebKit 相关依赖
-          brew install webkitgtk
-          brew install libsoup
-          brew install gtk+3
-          brew install cairo
-          brew install pango
-          brew install atk
-          brew install gdk-pixbuf
-          brew install glib
+          # 确保 Xcode 命令行工具已安装
+          xcode-select --install || true
+          # 设置 Rust 目标
+          rustup target add aarch64-apple-darwin x86_64-apple-darwin
 
-      - name: Install dependencies (Windows)
+      - name: Install system dependencies (Windows)
         if: matrix.platform == 'windows-latest'
         run: |
-          choco install nodejs
-          choco install rust
-          choco install python
-          choco install visualstudio2022buildtools
-          choco install visualstudio2022-workload-vctools
+          # 安装 Visual Studio Build Tools
+          choco install visualstudio2022buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended"
+          # 设置 Rust 目标
+          rustup target add x86_64-pc-windows-msvc
 
       - name: Install frontend dependencies
         run: bun install
@@ -104,8 +98,11 @@ jobs:
         run: bun run tauri build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Linux 特定环境变量
           PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig
           LD_LIBRARY_PATH: /usr/lib/x86_64-linux-gnu
+          # macOS 特定环境变量
+          MACOSX_DEPLOYMENT_TARGET: "10.15"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
