--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,17 @@ jobs:
             libatk1.0-dev \
             libgdk-pixbuf2.0-dev \
             libglib2.0-dev \
-            libgirepository1.0-dev
+            libgirepository1.0-dev \
+            # 额外的 WebKit 依赖
+            libwebkit2gtk-4.1-dev \
+            libsoup2.4-dev \
+            libgstreamer1.0-dev \
+            libgstreamer-plugins-base1.0-dev \
+            # 音频处理依赖
+            ffmpeg \
+            libavcodec-dev \
+            libavformat-dev \
+            libavutil-dev
 
       - name: Install system dependencies (macOS)
         if: matrix.platform == 'macos-latest'
@@ -79,12 +89,18 @@ jobs:
           xcode-select --install || true
           # 设置 Rust 目标
           rustup target add aarch64-apple-darwin x86_64-apple-darwin
+          # 安装 FFmpeg
+          brew install ffmpeg || true
 
       - name: Install system dependencies (Windows)
         if: matrix.platform == 'windows-latest'
         run: |
+          # 安装 Chocolatey
+          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
           # 安装 Visual Studio Build Tools
-          choco install visualstudio2022buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended"
+          choco install visualstudio2022buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended" -y
+          # 安装 FFmpeg
+          choco install ffmpeg -y
           # 设置 Rust 目标
           rustup target add x86_64-pc-windows-msvc
 
@@ -103,6 +119,8 @@ jobs:
           LD_LIBRARY_PATH: /usr/lib/x86_64-linux-gnu
           # macOS 特定环境变量
           MACOSX_DEPLOYMENT_TARGET: "10.15"
+          # Windows 特定环境变量
+          CARGO_TARGET_X86_64_PC_WINDOWS_MSVC_LINKER: "link.exe"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
