--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,10 +55,11 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
+          # 基础构建工具
+          sudo apt-get install -y build-essential libssl-dev pkg-config
+          
+          # WebKit 和 GTK 依赖
           sudo apt-get install -y \
-            build-essential \
-            libssl-dev \
-            pkg-config \
             libwebkit2gtk-4.0-dev \
             libgtk-3-dev \
             libsoup-3.0-dev \
@@ -70,17 +71,15 @@ jobs:
             libatk1.0-dev \
             libgdk-pixbuf2.0-dev \
             libglib2.0-dev \
-            libgirepository1.0-dev \
-            # 额外的 WebKit 依赖
-            libwebkit2gtk-4.1-dev \
-            libsoup2.4-dev \
-            libgstreamer1.0-dev \
-            libgstreamer-plugins-base1.0-dev \
-            # 音频处理依赖
-            ffmpeg \
-            libavcodec-dev \
-            libavformat-dev \
-            libavutil-dev
+            libgirepository1.0-dev
+          
+          # 音频处理依赖
+          sudo apt-get install -y ffmpeg || echo "FFmpeg 安装失败，继续构建"
+          
+          # 检查关键依赖是否安装成功
+          echo "检查关键依赖..."
+          pkg-config --exists webkit2gtk-4.0 && echo "✅ webkit2gtk-4.0 已安装" || echo "❌ webkit2gtk-4.0 未安装"
+          pkg-config --exists gtk+-3.0 && echo "✅ gtk+-3.0 已安装" || echo "❌ gtk+-3.0 未安装"
 
       - name: Install system dependencies (macOS)
         if: matrix.platform == 'macos-latest'
@@ -95,14 +94,20 @@ jobs:
       - name: Install system dependencies (Windows)
         if: matrix.platform == 'windows-latest'
         run: |
-          # 安装 Chocolatey
-          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
-          # 安装 Visual Studio Build Tools
-          choco install visualstudio2022buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended" -y
-          # 安装 FFmpeg
-          choco install ffmpeg -y
+          # 使用 GitHub Actions 的 Visual Studio 设置
+          echo "设置 Visual Studio 环境..."
+          
           # 设置 Rust 目标
           rustup target add x86_64-pc-windows-msvc
+          
+          # 检查 Visual Studio 工具
+          echo "检查 Visual Studio 工具..."
+          where cl || echo "cl 未找到"
+          where link || echo "link 未找到"
+          
+          # 设置环境变量
+          echo "设置环境变量..."
+          echo "CARGO_TARGET_X86_64_PC_WINDOWS_MSVC_LINKER=link.exe" >> $env:GITHUB_ENV
 
       - name: Install frontend dependencies
         run: bun install
