updated for test

--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -75,7 +75,7 @@ jobs:
           
           echo "安装 WebKit 依赖..."
           sudo apt-get install -y \
-            libwebkit2gtk-4.0-dev \
+            libwebkit2gtk-4.1-dev \
             libgtk-3-dev \
             libsoup-3.0-dev \
             libjavascriptcoregtk-4.1-dev \
@@ -86,11 +86,21 @@ jobs:
             libatk1.0-dev \
             libgdk-pixbuf2.0-dev \
             libglib2.0-dev \
-            libgirepository1.0-dev
+            libgirepository1.0-dev || {
+            echo "webkit2gtk-4.1-dev 安装失败，尝试安装 webkit2gtk-4.0-dev..."
+            sudo apt-get install -y libwebkit2gtk-4.0-dev
+          }
           
           echo "检查依赖..."
-          pkg-config --exists webkit2gtk-4.0 && echo "✅ webkit2gtk-4.0" || echo "❌ webkit2gtk-4.0"
+          pkg-config --exists webkit2gtk-4.1 && echo "✅ webkit2gtk-4.1" || echo "❌ webkit2gtk-4.1"
           pkg-config --exists gtk+-3.0 && echo "✅ gtk+-3.0" || echo "❌ gtk+-3.0"
+          
+          echo "=== 查找 webkit2gtk 相关文件 ==="
+          find /usr -name "*webkit2gtk*" 2>/dev/null | head -10
+          
+          echo "=== pkg-config 详细信息 ==="
+          pkg-config --modversion webkit2gtk-4.1 2>/dev/null || echo "无法获取 webkit2gtk-4.1 版本"
+          pkg-config --cflags --libs webkit2gtk-4.1 2>/dev/null || echo "无法获取 webkit2gtk-4.1 配置"
 
       - name: Install system dependencies (Windows)
         if: github.event.inputs.platform == 'windows-latest'
@@ -123,6 +133,12 @@ jobs:
           echo "=== 安装前端依赖 ==="
           bun install
 
+      - name: Clean previous builds
+        run: |
+          echo "=== 清理之前的构建 ==="
+          rm -rf src-tauri/target/
+          rm -rf dist/
+
       - name: Build frontend
         run: |
           echo "=== 构建前端 ==="
@@ -137,7 +153,17 @@ jobs:
           echo "检查 Cargo.toml..."
           cat src-tauri/Cargo.toml
           
-          echo "尝试构建..."
+          echo "=== 检查 Tauri CLI 版本 ==="
+          bun run tauri --version
+          
+          echo "=== 检查 Rust 工具链 ==="
+          rustup show
+          
+          echo "=== 检查环境变量 ==="
+          echo "PKG_CONFIG_PATH: $PKG_CONFIG_PATH"
+          echo "LD_LIBRARY_PATH: $LD_LIBRARY_PATH"
+          
+          echo "=== 尝试构建 ==="
           bun run tauri build --verbose || {
             echo "构建失败，尝试调试模式..."
             bun run tauri build --debug
