--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,9 +58,9 @@ jobs:
           # 基础构建工具
           sudo apt-get install -y build-essential libssl-dev pkg-config
           
-          # WebKit 和 GTK 依赖
+          # WebKit 和 GTK 依赖 - 根据 GitHub 讨论修复
           sudo apt-get install -y \
-            libwebkit2gtk-4.0-dev \
+            libwebkit2gtk-4.1-dev \
             libgtk-3-dev \
             libsoup-3.0-dev \
             libjavascriptcoregtk-4.1-dev \
@@ -71,14 +71,17 @@ jobs:
             libatk1.0-dev \
             libgdk-pixbuf2.0-dev \
             libglib2.0-dev \
-            libgirepository1.0-dev
+            libgirepository1.0-dev || {
+            echo "webkit2gtk-4.1-dev 安装失败，尝试安装 webkit2gtk-4.0-dev..."
+            sudo apt-get install -y libwebkit2gtk-4.0-dev
+          }
           
           # 音频处理依赖
           sudo apt-get install -y ffmpeg || echo "FFmpeg 安装失败，继续构建"
           
           # 检查关键依赖是否安装成功
           echo "检查关键依赖..."
-          pkg-config --exists webkit2gtk-4.0 && echo "✅ webkit2gtk-4.0 已安装" || echo "❌ webkit2gtk-4.0 未安装"
+          pkg-config --exists webkit2gtk-4.1 && echo "✅ webkit2gtk-4.1 已安装" || pkg-config --exists webkit2gtk-4.0 && echo "✅ webkit2gtk-4.0 已安装" || echo "❌ webkit2gtk 未安装"
           pkg-config --exists gtk+-3.0 && echo "✅ gtk+-3.0 已安装" || echo "❌ gtk+-3.0 未安装"
 
       - name: Install system dependencies (macOS)
