--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,14 +30,25 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev \
+          # 根据 GitHub 讨论修复 webkit2gtk 依赖
+          sudo apt-get install -y \
+            libwebkit2gtk-4.1-dev \
+            libsoup-3.0-dev \
             build-essential \
             curl \
             wget \
             libssl-dev \
             libgtk-3-dev \
             libayatana-appindicator3-dev \
-            librsvg2-dev
+            librsvg2-dev || {
+            echo "webkit2gtk-4.1-dev 安装失败，尝试安装 webkit2gtk-4.0-dev..."
+            sudo apt-get install -y libwebkit2gtk-4.0-dev
+          }
+          
+          # 检查依赖安装状态
+          echo "检查关键依赖..."
+          pkg-config --exists webkit2gtk-4.1 && echo "✅ webkit2gtk-4.1 已安装" || pkg-config --exists webkit2gtk-4.0 && echo "✅ webkit2gtk-4.0 已安装" || echo "❌ webkit2gtk 未安装"
+          pkg-config --exists gtk+-3.0 && echo "✅ gtk+-3.0 已安装" || echo "❌ gtk+-3.0 未安装"
 
       - name: Install frontend dependencies
         run: bun install
